0. Metadata
-----------
Copyright:  2010-2014 Karell Bertet
License:    http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.html CeCILL-B license

1. Copyright and disclaimer
---------------------------
This application is opensource software released under the CeCILL-B license. Please
see source code at https://github.com/kbertet/java-lattices.

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-01-20 Christophe Demko <chdemko@gmail.com>
	* src/dgraph/DGraph.java, test/dgraph/DGraphTest.java:
		^ Renaming getSizeEdges and getSizeNodes methods

2014-01-12 Christophe Demko <chdemko@gmail.com>
	* src/dgraph/*.java:
		^ Checkstyle
	* test/dgraph/*.java:
		+ Unit test

2013-11-18 Christophe Demko <chdemko@gmail.com>
 + Adding licenses

2013-11-18 Christophe Demko <chdemko@gmail.com>
 + Adding the ChangeLog file

2013-11-18 Karell Bertet 
 ! Adding the project to github
